Fix footer on mobile, add some more cleaning of voice names

--- a/assets/style.css
+++ b/assets/style.css
@@ -390,6 +390,10 @@ span.checkmark {
         padding-top: 3rem;
     }
 
+    footer {
+        font-size: 0.7rem;
+    }
+
     #copy-text {
         bottom: 72.5vh;
         right: 8vw;
